11344 listuser fails with NoClassDefFoundError